<resources>
    <string name="app_name">FirebaseApp</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone</string>
    <string name="age_hint">Age</string>
    <string name="btn_save_text">Save</string>
    <string name="height_hint">Height</string>
    <string name="user_name">Name</string>
    <string name="user_age">Age</string>
    <string name="user_height">Height</string>
    <string name="user_phone">Phone</string>
    <string name="display_data_btn">Display Data</string>
    <string name="show_btn">Show</string>
    <string name="display_data_title">Database Data</string>
    <string name="darkmode">DarkMode</string>
    <string name="lightmode">LightMode</string>
    <string name="choose_image_btn">Choose Image</string>
    <string name="user_image">user image</string>
    <string name="upload_an_image_to_firebase">Upload an Image to Firebase</string>
    <string name="upload_image_btn">Upload Image</string>
    <string name="btn_image_selected">Image Selected</string>
    <string name="user_photo">user photo</string>
    <string name="austin_miles_test">Austin Miles</string>
    <string name="_23_years_test">23 Years</string>
    <string name="_187_cm_test">187 cm</string>
    <string name="_0780883912_test">0780883912</string>
    <string name="image_preview">Image Preview</string>
    <string name="upload_data">Upload Data</string>
    <string name="add_user">Add User</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="register_here">Register here</string>
    <string name="login_picture">Login picture</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered?</string>
    <string name="login_here">Login here</string>
    <string name="logout">Logout</string>
    <string name="dark_theme">Change App Theme</string>
    <string name="refresh">Refresh</string>
    <string name="user_avatar">User Avatar</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="austin_miles">Austin Miles</string>
    <string name="welcome">Welcome!</string>
    <string name="age">Age:</string>
    <string name="height">Height:</string>
    <string name="phone">Phone:</string>
    <string name="post_title">Post Title</string>
    <string name="post_author">Post Author</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="post_body">Body</string>
    <string name="add_new_post">Add New Post</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_themes">Dark Theme</string>
    <string name="_10_30_am">10:30 am</string>
    <string name="post_image">Post Image</string>
    <string name="follow">Follow</string>
    <string name="body_test">Body Test</string>
    <string name="upload_post">Upload Post</string>
</resources>