<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/user1" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="8dp"
        android:background="#00000000"
        android:gravity="bottom|start"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:background="@drawable/cornered_view"
            android:orientation="vertical">
            <TextView
                android:id="@+id/userEmailAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/austin_miles"
                android:fontFamily="@font/nunito_sans_bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/welcome"
                android:fontFamily="@font/nunito_sans_bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>

