<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userCardView"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_marginStart="4dp"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="4dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/recentPostImage"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:outlineProvider="background"
            android:contentDescription="@string/user_photo"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic"/>

        <TextView
            android:id="@+id/recentPostTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:text="@string/post_title"
            android:textSize="14sp"
            android:fontFamily="@font/nunito_sans_bold"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/recentPostAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="11sp"
            android:text="@string/post_author" />

    </androidx.appcompat.widget.LinearLayoutCompat>

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

<!--        <ImageView-->
<!--            android:id="@+id/userPhotoIV"-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginStart="8dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:background="@drawable/rounded_image"-->
<!--            android:contentDescription="@string/user_photo"-->
<!--            android:outlineProvider="background"-->
<!--            android:scaleType="centerCrop"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            tools:ignore="ImageContrastCheck"-->
<!--            tools:srcCompat="@tools:sample/backgrounds/scenic" />-->

<!--        <TextView-->
<!--            android:id="@+id/usernameTV"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginEnd="8dp"-->
<!--            android:maxLines="1"-->
<!--            android:fontFamily="@font/nunito_sans_bold"-->
<!--            android:text="@string/austin_miles_test"-->
<!--            android:textSize="22sp"-->
<!--            android:textStyle="normal|bold"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/textView"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.5"-->
<!--            app:layout_constraintStart_toEndOf="@+id/userPhotoIV"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

<!--        <TextView-->
<!--            android:id="@+id/userAgeTV"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="4dp"-->
<!--            android:layout_marginTop="4dp"-->
<!--            android:layout_marginEnd="8dp"-->
<!--            android:maxLines="1"-->
<!--            android:text="@string/_23_years_test"-->
<!--            android:textColor="@color/teal_200"-->
<!--            android:textSize="16sp"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/userHeightTV"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@+id/textView"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/usernameTV"-->
<!--            tools:ignore="TextContrastCheck" />-->

<!--        <TextView-->
<!--            android:id="@+id/userHeightTV"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="4dp"-->
<!--            android:layout_marginTop="4dp"-->
<!--            android:layout_marginEnd="8dp"-->
<!--            android:maxLines="1"-->
<!--            android:paddingBottom="4dp"-->
<!--            android:text="@string/_187_cm_test"-->
<!--            android:textSize="17sp"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/userPhoneNumberTV"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@+id/textView2"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/userAgeTV" />-->

<!--        <TextView-->
<!--            android:id="@+id/userPhoneNumberTV"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="4dp"-->
<!--            android:layout_marginEnd="8dp"-->
<!--            android:paddingBottom="4dp"-->
<!--            android:maxLines="1"-->
<!--            android:text="@string/_0780883912_test"-->
<!--            android:textSize="17sp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@+id/textView3"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/userHeightTV" />-->

<!--        <TextView-->
<!--            android:id="@+id/textView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:fontFamily="@font/nunito_sans_bold"-->
<!--            android:text="@string/age"-->
<!--            android:maxLines="1"-->
<!--            android:textSize="16sp"-->
<!--            android:textStyle="normal|bold"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/textView2"-->
<!--            app:layout_constraintStart_toEndOf="@+id/userPhotoIV"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/usernameTV" />-->

<!--        <TextView-->
<!--            android:id="@+id/textView2"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:fontFamily="@font/nunito_sans_bold"-->
<!--            android:text="@string/height"-->
<!--            android:textSize="17sp"-->
<!--            android:maxLines="1"-->
<!--            android:textStyle="normal|bold"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/textView3"-->
<!--            app:layout_constraintStart_toEndOf="@+id/userPhotoIV"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/textView" />-->

<!--        <TextView-->
<!--            android:id="@+id/textView3"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:fontFamily="@font/nunito_sans_bold"-->
<!--            android:text="@string/phone"-->
<!--            android:maxLines="1"-->
<!--            android:textSize="17sp"-->
<!--            android:textStyle="normal|bold"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@+id/userPhotoIV"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/textView2" />-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
</com.google.android.material.card.MaterialCardView>

